<resources>
<string name="audio_info">Audio Info</string>
<string name="audio_outputs">Audio Outputs</string>
<string name="bit_perfect">Bit Perfect</string>
<string name="buttons">Buttons</string>
<string name="clear">Clear</string>
<string name="d_ms">%d ms</string>
<string name="edition_pak_name">com.maxmpz.audioplayer</string>
<string name="equalizer">Equalizer</string>
<string name="f_percent">%.1f%%</string>
<string name="close">Close</string>
<string name="h_pinch_to_zoom">Pinch-to-zoom &lt;img src=zoom_arrows_12dp> for zooming</string>
<string name="keep_notification_hint1">If disabled, notification still stays when player is paused via notification</string>
<string name="keep_notification_hint2">Notification can be removed by swiping away, X button, using Stop action in Poweramp, etc.</string>
<string name="local_lyrics_hint">Local lyrics: lyrics tag, LRC file, or lyrics previously downloaded by a lyrics plugin</string>
<string name="lyrics">Lyrics</string>
<string name="lyrics_menu_item_action">Lyrics Item In The Track Menu</string>
<string name="lyrics_offset">Lyrics Time Offset</string>
<string name="lyrics_offset_hint1">Positive value makes lyrics text appear earlier</string>
<string name="lyrics_offset_hint2">Negative value delays lyrics text</string>
<string name="lyrics_offset_hint3">Per-output Visualization/Lyrics latency is also applied</string>
<string name="media_notify_inactive_hint1">Media Notification for an inactive player has only the play button</string>
<string name="media_notify_inactive_hint2">"If enabled, this notification can't be removed by player on pause. When disabled, phone reboot may be needed to apply"</string>
<string name="no_keep_notif_on_dscn_hint1">This option may temporarily keep Poweramp idle service if required</string>
<string name="notify_action_buttons">Media action buttons</string>
<string name="output_driver_can_override_this">Output driver can override this setting</string>
<string name="per_output_follow_sr_hint">Enable the &lt;a href=settings/audio_bit_perfect>Bit Perfect&lt;/a> options to avoid or minimize resampling</string>
<string name="pref_aa_8888">Use 24-bit RGB</string>
<string name="pref_aa_always">Always Send Album Art</string>
<string name="pref_aa_aspect_ratio">Aspect Ratio</string>
<string name="pref_aa_download_hd">High Resolution</string>
<string name="pref_aa_downloading">Download</string>
<string name="pref_aa_force_default">Force Default Image</string>
<string name="pref_aa_hi_res_for_apis">Send High Resolution Album Art</string>
<string name="pref_aa_higher_res">Increase Resolution</string>
<string name="pref_aa_no_ashmem">API Compatibility</string>
<string name="pref_aa_per_stream_track">Prefer Track Cover for Streams</string>
<string name="pref_aa_wifi_only">Download Only On Wi-Fi</string>
<string name="pref_advanced_tweaks">Advanced Tweaks</string>
<string name="pref_album_art_options">Album Art</string>
<string name="pref_always_utf8">Always Use UTF-8</string>
<string name="pref_audio_engine">Audio</string>
<string name="pref_audio_focus">Audio Focus</string>
<string name="pref_clear_aa_cache">Delete Cache</string>
<string name="pref_colorize_notification">Colorize Notification</string>
<string name="pref_direct_volume_control">Direct Volume Control (DVC)</string>
<string name="pref_dither">Dither</string>
<string name="pref_download_album_art">Download Album Art</string>
<string name="pref_download_artist_art">Download Artist Images</string>
<string name="pref_download_if_no_tags">Also Search By Title/Filename</string>
<string name="pref_experiment">Experiment</string>
<string name="pref_fade_and_gapless">Crossfade, Fade, and Gapless</string>
<string name="pref_folders_library_scanner">Scanner</string>
<string name="pref_full_rescan_required">Full Rescan is required</string>
<string name="pref_increases_traffic">Increases traffic usage</string>
<string name="pref_keep_notification">Keep Notification</string>
<string name="pref_keep_screen_on">Keep Screen On</string>
<string name="pref_keep_service">Keep Service</string>
<string name="pref_keep_service_msg">On Android 8+ this option works reliable only with the active notification</string>
<string name="pref_list_zoom_lyrics">Lyrics Size</string>
<string name="pref_look_and_feel">Look and Feel</string>
<string name="pref_lrc_scan">Scan LRC Files</string>
<string name="pref_lyrics_custom_url">Custom URL</string>
<string name="pref_lyrics_hint1">Poweramp loads lyrics from track tags or from the LRC file</string>
<string name="pref_lyrics_hint2">If lyrics plugin is installed, Poweramp also queries the plugin for the lyrics</string>
<string name="pref_lyrics_hint3">If no lyrics found, lyrics text can be searched in the preferred lyrics app or in browser</string>
<string name="pref_lyrics_in_menu_hint">Long press on lyrics item in track menu always opens 3rd party app</string>
<string name="pref_lyrics_long_press_hint">Long press on lyrics button always opens 3rd party app</string>
<string name="pref_lyrics_plugin">Preferred Lyrics App</string>
<string name="pref_main_lyrics_button">Lyrics Button</string>
<string name="pref_main_lyrics_swipe">Lyrics Swipe Up</string>
<string name="pref_main_lyrics_swipe_hint">When lyrics swipe is enabled, swipe album art up to show lyrics.</string>
<string name="pref_main_lyrics_swipe_hint2">Return from lyrics by swipe to side or scrolling up.</string>
<string name="pref_no_keep_notif_on_dscn">Remove Notification on Disconnection</string>
<string name="pref_notification_colors">Notification Colors</string>
<string name="pref_notification_keeping">Notification Keeping</string>
<string name="pref_notification_type">Notification Type</string>
<string name="pref_notifications">Notifications</string>
<string name="pref_notify_prefer_nav">Show Previous Track Action (&lt;&lt;)</string>
<string name="pref_notify_prio">Notification Priority</string>
<string name="pref_notify_resume">Keep Inactive Media Notification</string>
<string name="pref_prefer_download">Prefer Downloaded Album Art</string>
<string name="pref_replay_gain">Replay Gain (RG)</string>
<string name="pref_requires_more_ram">Consumes more RAM. Poweramp may crash due to insufficient memory on the devices with not enough RAM</string>
<string name="pref_resampler">Resampler</string>
<string name="pref_resampler_cutoff">Resampler Cutoff Frequency Ratio</string>
<string name="pref_resampler_summary">Resampling/dither settings</string>
<string name="pref_resampler_type">Resampler Type</string>
<string name="pref_rescan_lyrics_tags">Rescan Lyrics Tags</string>
<string name="pref_reset_negative_aa_status">Reset Negative Status</string>
<string name="pref_restore_defaults">Restore Defaults</string>
<string name="pref_status_lib">Navigate to the List</string>
<string name="pref_summary_aa_8888">Higher color resolution for album art. Requires 2x more memory per image</string>
<string name="pref_summary_aa_always">For smartwatches/other devices which should always receive album art, even when screen is off</string>
<string name="pref_summary_aa_download_hd">Higher downloaded album art resolution, increases storage/connection bandwidth usage</string>
<string name="pref_summary_aa_force_default">Always show default image instead of any album art</string>
<string name="pref_summary_aa_hi_res_for_apis">High resolution album art is sent to Android lock screen, app widgets, and other media API consumers. Lock Screen ➔ Blur has priority over this option</string>
<string name="pref_summary_aa_higher_res">Increase image quality for high resolution embedded/in-folder images</string>
<string name="pref_summary_aa_no_ashmem">Change if album art is not visible in Android Auto/3rd party apps</string>
<string name="pref_summary_aa_per_stream_track">Show album art based on stream track title/artist instead of the stream name</string>
<string name="pref_summary_aa_wifi_only">Album art will be downloaded only when wi-fi is connected</string>
<string name="pref_summary_advanced_tweaks">Volume levels, MusicFX, equalizer/reverb presets reset</string>
<string name="pref_summary_album_art_options">Download, quality, cache cleanup</string>
<string name="pref_summary_always_utf8">If disabled, Tag Encoding setting is used for non-Unicode files</string>
<string name="pref_summary_audio_focus">Pause/Resume/Duck volume on calls/notifications/start</string>
<string name="pref_summary_audio_info">Detailed info about the audio processing. Also available by long press on small meta info on the Main and Equalizer screens</string>
<string name="pref_summary_audio_output">Wired Headset, Bluetooth, USB, Chromecast, and other outputs</string>
<string name="pref_summary_clear_aa_cache">Poweramp images cache will be deleted</string>
<string name="pref_summary_colorize_notification">Match notification colors and background to the track album art image</string>
<string name="pref_summary_download_album_art">Automatically search and download missing album art</string>
<string name="pref_summary_download_artist_art">Includes Album Artists and Composers. If disabled, track album art is used</string>
<string name="pref_summary_download_if_no_tags">Search for album art even if no tags are found in the track</string>
<string name="pref_summary_dvc">DVC options, DVC for Bluetooth</string>
<string name="pref_summary_equalizer">Equalizer settings, number of bands, frequencies</string>
<string name="pref_summary_fade_and_gapless">Crossfade options, fade type and length, gapless</string>
<string name="pref_summary_keep_notification_always">Notification stays even if Poweramp paused in its UI, when playback auto-ends, etc.</string>
<string name="pref_summary_keep_service">"Poweramp player service won't be unloaded when in idle"</string>
<string name="pref_summary_lrc_scan">If enabled, Poweramp searches for LRC files in the Music Folders, matching LRC files by their tags, file names, and folders</string>
<string name="pref_summary_lyrics_custom_url">For the Browser via custom URL</string>
<string name="pref_summary_lyrics_keep_screen">Keep screen on for the lyrics</string>
<string name="pref_summary_lyrics_plugin_s">3rd party app to search lyrics when no lyrics found (if installed): %s</string>
<string name="pref_summary_main_lyrics_button">Button on the Player Screen/cover</string>
<string name="pref_summary_main_lyrics_swipe">Swipe action on the Player Screen/cover</string>
<string name="pref_summary_no_keep_notif_on_dscn">Notification is removed on Headset/BT disconnection if player is paused</string>
<string name="pref_summary_notification_colors">Adjust if notification text/icons are not visible due to the non-standard colors</string>
<string name="pref_summary_notify_prefer_nav">&lt;&lt; is shown instead of close action (x) in the small notification</string>
<string name="pref_summary_notify_prio">Defines Poweramp notification position</string>
<string name="pref_summary_notify_resume">Player can be resumed via Media Notification suggestion when inactive or unloaded (depending on firmware)</string>
<string name="pref_summary_prefer_download">Prefer downloaded album art over in-folder Cover.jpg/AlbumArt.jpg, etc</string>
<string name="pref_summary_replay_gain">Enable RG, set source, preamp values</string>
<string name="pref_summary_rescan_lyrics_tags">Force rescan tracks which may contain lyrics tags, including SYLT</string>
<string name="pref_summary_reset_negative_aa_status">Clear stored \"not-found\" status for album/artist images</string>
<string name="pref_summary_status_lib">Notification navigates to the current list on touch</string>
<string name="resampling_opts_applied_hint">Resampling options are applied only when the applicable Poweramp resampling stage is used</string>
<string name="search">Search</string>
<string name="summary_bit_perfect">64-bit audio pipeline, Perfect Bit Perfect</string>
<string name="summary_lyrics_offset">Applied to synced lyrics in addition to the offset tag</string>
</resources>