<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:z="http://schemas.android.com/apk/res-auto" xmlns:w="http://schemas.android.com/apk/res-auto" android:title="@string/lyrics" z:searchBreadcrumb1="@string/pref_look_and_feel">
	<com.maxmpz.audioplayer.preference.RawTextPreference android:background="@drawable/settings_quote_background" z:line1="@string/pref_main_lyrics_swipe_hint" z:line2="@string/pref_main_lyrics_swipe_hint2" z:line3="@string/h_pinch_to_zoom" z:keepPaddings="true" />
	<com.maxmpz.audioplayer.preference.TagListPreference android:title="@string/pref_main_lyrics_swipe" android:key="main_lyrics_swipe" android:summary="@string/pref_summary_main_lyrics_swipe" z:entries="@array/pref_main_lyrics_button_entries" z:values="@array/pref_main_lyrics_button_values" />
	<com.maxmpz.audioplayer.preference.RawTextPreference android:background="@drawable/settings_quote_background" z:line1="@string/local_lyrics_hint" z:line2="@string/pref_full_rescan_required" z:addDots="true" z:keepPaddings="true" />
	<com.maxmpz.audioplayer.preference.TagListPreference android:title="@string/pref_main_lyrics_button" android:key="main_lyrics_button" android:summary="@string/pref_summary_main_lyrics_button" z:entries="@array/pref_main_lyrics_button_entries" z:values="@array/pref_main_lyrics_button_values" />
	<com.maxmpz.audioplayer.preference.RawTextPreference z:line1="@string/pref_lyrics_long_press_hint" z:zeroTopPad="true" />
	<com.maxmpz.audioplayer.preference.TagListPreference android:title="@string/lyrics_menu_item_action" android:key="lyrics_in_menu" z:entries="@array/pref_lyrics_in_menu_entries" z:values="@array/pref_lyrics_in_menu_values" />
	<com.maxmpz.audioplayer.preference.RawTextPreference z:line1="@string/pref_lyrics_in_menu_hint" z:zeroTopPad="true" />
	<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:title="@string/pref_keep_screen_on" android:key="lyrics_keep_screen" android:summary="@string/pref_summary_lyrics_keep_screen" />
	<com.maxmpz.audioplayer.preference.SeekbarPreference android:title="@string/lyrics_offset" android:key="lyrics_offset" android:summary="@string/summary_lyrics_offset" z:max="5000" z:min="-5000" z:step="50" z:leftLabel="-5000" z:rightLabel="5000" z:tickMark="@drawable/pref_seekbar_tickmark" z:summary2="@string/d_ms" z:centerLabel="0" />
	<com.maxmpz.audioplayer.preference.RawTextPreference z:line1="@string/lyrics_offset_hint1" z:line2="@string/lyrics_offset_hint2" z:line3="@string/lyrics_offset_hint3" z:zeroTopPad="true" />
	<com.maxmpz.audioplayer.preference.TagListPreference android:title="@string/pref_list_zoom_lyrics" android:key="list_zoom_lyrics" android:summary="@string/h_pinch_to_zoom" z:entries="@array/pref_list_zoom_lyrics_entries" z:values="@array/pref_list_zoom_lyrics_values" />
	<com.maxmpz.audioplayer.preference.RawTextPreference android:background="@drawable/settings_quote_background" z:line1="@string/pref_lyrics_hint1" z:line2="@string/pref_lyrics_hint2" z:line3="@string/pref_lyrics_hint3" z:keepPaddings="true" />
	<com.maxmpz.audioplayer.preference.NumberListPreference android:title="@string/pref_lyrics_plugin" android:key="lyrics_plugin" android:summary="@string/pref_summary_lyrics_plugin_s" android:dialogTitle="@string/pref_lyrics_plugin" z:entries="@array/pref_lyrics_plugin_labels" z:values="@array/pref_lyrics_plugin_values" />
	<com.maxmpz.audioplayer.preference.EditTextPreference android:title="@string/pref_lyrics_custom_url" android:key="lyrics_custom_url" android:summary="@string/pref_summary_lyrics_custom_url" z:summary2="%s" />
	<PreferenceCategory android:title="@string/pref_folders_library_scanner">
		<com.maxmpz.audioplayer.preference.ProgressPreference android:persistent="false" android:title="@string/pref_rescan_lyrics_tags" android:key="rescan_lyrics_tags" android:summary="@string/pref_summary_rescan_lyrics_tags" />
		<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:persistent="true" android:title="@string/pref_lrc_scan" android:key="lrc_scan" android:summary="@string/pref_summary_lrc_scan" />
		<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:persistent="true" android:title="@string/pref_always_utf8" android:key="lrc_utf8" android:summary="@string/pref_summary_always_utf8" />
	</PreferenceCategory>
	<Preference android:title="@string/pref_restore_defaults" android:key="restore_defaults" />
</PreferenceScreen>
