<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:z="http://schemas.android.com/apk/res-auto" xmlns:w="http://schemas.android.com/apk/res-auto" android:title="@string/pref_notifications" z:searchBreadcrumb1="@string/pref_look_and_feel">
	<com.maxmpz.audioplayer.preference.TagListPreference android:persistent="true" android:title="@string/pref_notification_type" android:key="notification_type" android:defaultValue="0" z:entries="@array/pref_notification_type_entries" />
	<com.maxmpz.audioplayer.preference.TagListPreference android:title="@string/pref_notification_colors" android:key="notification_colors" android:summary="@string/pref_summary_notification_colors" android:defaultValue="0" z:entries="@array/pref_notification_colors_entries" />
	<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:title="@string/pref_colorize_notification" android:key="notify_colorize" android:summary="@string/pref_summary_colorize_notification" android:defaultValue="true" />
	<com.maxmpz.audioplayer.preference.RedirectPreference android:title="@string/buttons" android:key="buttons" android:summary="@string/notify_action_buttons" z:target="ui_mediaactions" />
	<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:persistent="true" android:title="@string/pref_status_lib" android:key="status_lib" android:summary="@string/pref_summary_status_lib" android:defaultValue="false" />
	<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:title="@string/pref_notify_prefer_nav" android:key="notify_prefer_nav" android:summary="@string/pref_summary_notify_prefer_nav" android:defaultValue="false" />
	<com.maxmpz.audioplayer.preference.TagListPreference android:title="@string/pref_notify_prio" android:key="notify_prio" android:summary="@string/pref_summary_notify_prio" z:entries="@array/pref_notify_prio_entries" z:values="@array/pref_notify_prio_values" />
	<PreferenceCategory android:title="@string/pref_notification_keeping" android:key="notification_keeping">
		<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:title="@string/pref_keep_notification" android:key="keep_notification" android:summary="@string/pref_summary_keep_notification_always" />
		<com.maxmpz.audioplayer.preference.RawTextPreference android:background="@drawable/settings_quote_background" z:line1="@string/keep_notification_hint1" z:line2="@string/keep_notification_hint2" z:keepPaddings="true" />
		<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:title="@string/pref_notify_resume" android:key="notify_resume" android:summary="@string/pref_summary_notify_resume" />
		<com.maxmpz.audioplayer.preference.RawTextPreference android:background="@drawable/settings_quote_background" android:key="_notify_resume_hint" z:line1="@string/media_notify_inactive_hint1" z:line2="@string/media_notify_inactive_hint2" z:keepPaddings="true" />
		<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:persistent="true" android:title="@string/pref_keep_service" android:key="keep_service" android:summary="@string/pref_summary_keep_service" z:summary2="@string/pref_keep_service_msg" />
		<com.maxmpz.audioplayer.preference.MultilineSwitchPreference android:title="@string/pref_no_keep_notif_on_dscn" android:key="no_keep_notif_on_dscn" android:summary="@string/pref_summary_no_keep_notif_on_dscn" z:summary2="@string/no_keep_notif_on_dscn_hint1" />
	</PreferenceCategory>
	<Preference android:title="@string/pref_restore_defaults" android:key="restore_defaults" />
</PreferenceScreen>
