<?xml version="1.0" encoding="utf-8" ?>
<com.maxmpz.audioplayer.preference.SettingsSearchLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:w="http://schemas.android.com/apk/res-auto" style="@style/SettingsSearchLayout">
	<com.maxmpz.widget.base.FastLayout android:id="@id/search_content" style="@style/SettingsSearchContent">
		<com.maxmpz.widget.list.PowerList android:id="@id/search_list" style="@style/SettingsSearchList" />
	</com.maxmpz.widget.base.FastLayout>
	<SceneParams android:visibility="visible" w:scene="@id/scene_search" />
	<com.maxmpz.widget.base.FastLayout android:id="@id/search_panel" style="@style/SettingsSearchPanel">
		<com.maxmpz.widget.base.FastButton android:id="@id/search_back_button" android:contentDescription="@string/close" style="@style/SettingsSearchBackButton" />
		<com.maxmpz.widget.base.FastButton android:id="@id/search_close_button" android:contentDescription="@string/clear" style="@style/SettingsSearchCloseButton" />
		<com.maxmpz.audioplayer.preference.SearchEditText android:id="@id/search_edit" android:hint="@string/search" style="@style/SettingsSearchEdit" />
	</com.maxmpz.widget.base.FastLayout>
	<SceneParams w:scene="@id/scene_search" style="@style/SettingsSearchPanel_scene_search" />
</com.maxmpz.audioplayer.preference.SettingsSearchLayout>
